tests/tooling/fixtures/native/recovery/positive/message_send_nonzero_global_identifier_fast_path.objc3
module MessageSendNonzeroGlobalIdentifierFastPath;

let receiver = 7;

fn main() -> i32 {
  return [receiver ping];
}
