tests/tooling/fixtures/native/recovery/negative/negative_hex_literal_global_divide_by_zero.objc3
// Expected diagnostic code(s): O3S210.
module NegativeHexLiteralGlobalDivideByZero;

let value = 0x10 / 0x0;

fn main() -> i32 {
  return value;
}
